--- a/index.html
+++ b/index.html
@@ -72,72 +72,54 @@
             
             <!-- Sweet Products -->
             <div class="product-grid active" id="sweet">
-                <div class="product-card" data-product="1">
-                    <div class="product-image-container">
-                        <img src="1 main.jpg" alt="Handmade Sweet Treat 1" class="product-image">
-                        <div class="image-overlay">
-                            <span class="view-gallery">View Gallery</span>
-                        </div>
+                <div class="product-card">
+                    <div class="product-image-container sweet-1">
+                        <div class="product-icon">🎂</div>
                     </div>
                     <div class="product-info">
                         <h3>Artisan Cakes</h3>
                         <p>Handcrafted cakes made with premium ingredients and traditional techniques</p>
                     </div>
                 </div>
-                <div class="product-card" data-product="2">
-                    <div class="product-image-container">
-                        <img src="2 main.jpg" alt="Handmade Sweet Treat 2" class="product-image">
-                        <div class="image-overlay">
-                            <span class="view-gallery">View Gallery</span>
-                        </div>
+                <div class="product-card">
+                    <div class="product-image-container sweet-2">
+                        <div class="product-icon">🍪</div>
                     </div>
                     <div class="product-info">
                         <h3>Fresh Cookies</h3>
                         <p>Soft, chewy cookies baked daily with love and care</p>
                     </div>
                 </div>
-                <div class="product-card" data-product="3">
-                    <div class="product-image-container">
-                        <img src="3 main.jpg" alt="Handmade Sweet Treat 3" class="product-image">
-                        <div class="image-overlay">
-                            <span class="view-gallery">View Gallery</span>
-                        </div>
+                <div class="product-card">
+                    <div class="product-image-container sweet-3">
+                        <div class="product-icon">🥧</div>
                     </div>
                     <div class="product-info">
                         <h3>Pastries & Tarts</h3>
                         <p>Delicate pastries with seasonal fillings, all handmade</p>
                     </div>
                 </div>
-                <div class="product-card" data-product="4">
-                    <div class="product-image-container">
-                        <img src="4 main.jpg" alt="Handmade Sweet Treat 4" class="product-image">
-                        <div class="image-overlay">
-                            <span class="view-gallery">View Gallery</span>
-                        </div>
+                <div class="product-card">
+                    <div class="product-image-container sweet-4">
+                        <div class="product-icon">🧁</div>
                     </div>
                     <div class="product-info">
                         <h3>Muffins & Scones</h3>
                         <p>Fluffy muffins and buttery scones, baked fresh daily</p>
                     </div>
                 </div>
-                <div class="product-card" data-product="5">
-                    <div class="product-image-container">
-                        <img src="5 main.jpg" alt="Handmade Sweet Treat 5" class="product-image">
-                        <div class="image-overlay">
-                            <span class="view-gallery">View Gallery</span>
-                        </div>
+                <div class="product-card">
+                    <div class="product-image-container sweet-5">
+                        <div class="product-icon">🍩</div>
                     </div>
                     <div class="product-info">
                         <h3>Donuts & Doughnuts</h3>
                         <p>Freshly fried, glazed to perfection by hand</p>
                     </div>
                 </div>
-                <div class="product-card" data-product="6">
-                    <div class="product-image-container">
-                        <img src="6 main.jpg" alt="Handmade Sweet Treat 6" class="product-image">
-                        <div class="image-overlay">
-                            <span class="view-gallery">View Gallery</span>
-                        </div>
+                <div class="product-card">
+                    <div class="product-image-container sweet-6">
+                        <div class="product-icon">🍫</div>
                     </div>
                     <div class="product-info">
                         <h3>Brownies & Bars</h3>
@@ -148,40 +130,58 @@
 
             <!-- Savory Products -->
             <div class="product-grid" id="savory">
-                <div class="product-card" data-product="7">
-                    <div class="product-image-container">
-                        <img src="7 main.jpg" alt="Handmade Savory Delight 7" class="product-image">
-                        <div class="image-overlay">
-                            <span class="view-gallery">View Gallery</span>
-                        </div>
+                <div class="product-card">
+                    <div class="product-image-container savory-1">
+                        <div class="product-icon">🍞</div>
                     </div>
                     <div class="product-info">
                         <h3>Fresh Breads</h3>
                         <p>Artisan breads baked with traditional methods, all handmade</p>
                     </div>
                 </div>
-                <div class="product-card" data-product="8">
-                    <div class="product-image-container">
-                        <img src="8 main.jpg" alt="Handmade Savory Delight 8" class="product-image">
-                        <div class="image-overlay">
-                            <span class="view-gallery">View Gallery</span>
-                        </div>
+                <div class="product-card">
+                    <div class="product-image-container savory-2">
+                        <div class="product-icon">🥧</div>
                     </div>
                     <div class="product-info">
                         <h3>Savory Pies</h3>
                         <p>Hearty pies with delicious fillings, crafted by hand</p>
                     </div>
                 </div>
-                <div class="product-card" data-product="9">
-                    <div class="product-image-container">
-                        <img src="9 main.jpg" alt="Handmade Savory Delight 9" class="product-image">
-                        <div class="image-overlay">
-                            <span class="view-gallery">View Gallery</span>
-                        </div>
+                <div class="product-card">
+                    <div class="product-image-container savory-3">
+                        <div class="product-icon">🥐</div>
                     </div>
                     <div class="product-info">
                         <h3>Quiches & Tarts</h3>
                         <p>Flaky crusts with savory fillings, all handmade</p>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image-container savory-4">
+                        <div class="product-icon">🥨</div>
+                    </div>
+                    <div class="product-info">
+                        <h3>Pretzels & Rolls</h3>
+                        <p>Soft, warm pretzels and dinner rolls, all handmade</p>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image-container savory-5">
+                        <div class="product-icon">🫓</div>
+                    </div>
+                    <div class="product-info">
+                        <h3>Focaccia & Flatbreads</h3>
+                        <p>Herb-infused flatbreads and focaccia, baked fresh</p>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image-container savory-6">
+                        <div class="product-icon">🧀</div>
+                    </div>
+                    <div class="product-info">
+                        <h3>Savory Muffins</h3>
+                        <p>Cheese, herb, and vegetable muffins, all handmade</p>
                     </div>
                 </div>
             </div>
@@ -233,20 +233,6 @@
         </div>
     </section>
 
-    <!-- Image Gallery Modal -->
-    <div id="imageModal" class="modal">
-        <span class="modal-close">&times;</span>
-        <div class="modal-content">
-            <div class="modal-image-container">
-                <img id="modalImage" src="" alt="Product Gallery">
-            </div>
-            <div class="modal-nav">
-                <button class="modal-btn prev-btn" id="prevBtn">&#10094;</button>
-                <button class="modal-btn next-btn" id="nextBtn">&#10095;</button>
-            </div>
-            <div class="modal-thumbnails" id="modalThumbnails"></div>
-        </div>
-    </div>
 
     <!-- Footer -->
     <footer class="footer">
