Update copyright year to 2026 and remove footer text

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Dough Dough. All rights reserved. Made with ❤️ and lots of flour.</p>
+            <p>&copy; 2026 Dough Dough. All rights reserved.</p>
         </div>
     </footer>
 
