--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
-                <h1>Dough Dough</h1>
+                <a href="#home">
+                    <img src="Images/Dough Dough Logo.jpg" alt="Dough Dough Logo" class="logo-img">
+                </a>
             </div>
             <ul class="nav-menu">
                 <li><a href="#home">Home</a></li>
