Add admin panel for product management with image upload, prices, and descriptions

--- a/index.html
+++ b/index.html
@@ -74,118 +74,12 @@
             
             <!-- Sweet Products -->
             <div class="product-grid active" id="sweet">
-                <div class="product-card">
-                    <div class="product-image-container sweet-1">
-                        <div class="product-icon">🎂</div>
-                    </div>
-                    <div class="product-info">
-                        <h3>Artisan Cakes</h3>
-                        <p>Handcrafted cakes made with premium ingredients and traditional techniques</p>
-                    </div>
-                </div>
-                <div class="product-card">
-                    <div class="product-image-container sweet-2">
-                        <div class="product-icon">🍪</div>
-                    </div>
-                    <div class="product-info">
-                        <h3>Fresh Cookies</h3>
-                        <p>Soft, chewy cookies baked daily with love and care</p>
-                    </div>
-                </div>
-                <div class="product-card">
-                    <div class="product-image-container sweet-3">
-                        <div class="product-icon">🥧</div>
-                    </div>
-                    <div class="product-info">
-                        <h3>Pastries & Tarts</h3>
-                        <p>Delicate pastries with seasonal fillings, all handmade</p>
-                    </div>
-                </div>
-                <div class="product-card">
-                    <div class="product-image-container sweet-4">
-                        <div class="product-icon">🧁</div>
-                    </div>
-                    <div class="product-info">
-                        <h3>Muffins & Scones</h3>
-                        <p>Fluffy muffins and buttery scones, baked fresh daily</p>
-                    </div>
-                </div>
-                <div class="product-card">
-                    <div class="product-image-container sweet-5">
-                        <div class="product-icon">🍩</div>
-                    </div>
-                    <div class="product-info">
-                        <h3>Donuts & Doughnuts</h3>
-                        <p>Freshly fried, glazed to perfection by hand</p>
-                    </div>
-                </div>
-                <div class="product-card">
-                    <div class="product-image-container sweet-6">
-                        <div class="product-icon">🍫</div>
-                    </div>
-                    <div class="product-info">
-                        <h3>Brownies & Bars</h3>
-                        <p>Rich, fudgy brownies and dessert bars, all handmade</p>
-                    </div>
-                </div>
+                <!-- Products will be loaded dynamically -->
             </div>
 
             <!-- Savory Products -->
             <div class="product-grid" id="savory">
-                <div class="product-card">
-                    <div class="product-image-container savory-1">
-                        <div class="product-icon">🍞</div>
-                    </div>
-                    <div class="product-info">
-                        <h3>Fresh Breads</h3>
-                        <p>Artisan breads baked with traditional methods, all handmade</p>
-                    </div>
-                </div>
-                <div class="product-card">
-                    <div class="product-image-container savory-2">
-                        <div class="product-icon">🥧</div>
-                    </div>
-                    <div class="product-info">
-                        <h3>Savory Pies</h3>
-                        <p>Hearty pies with delicious fillings, crafted by hand</p>
-                    </div>
-                </div>
-                <div class="product-card">
-                    <div class="product-image-container savory-3">
-                        <div class="product-icon">🥐</div>
-                    </div>
-                    <div class="product-info">
-                        <h3>Quiches & Tarts</h3>
-                        <p>Flaky crusts with savory fillings, all handmade</p>
-                    </div>
-                </div>
-                <div class="product-card">
-                    <div class="product-image-container savory-4">
-                        <div class="product-icon">🥨</div>
-                    </div>
-                    <div class="product-info">
-                        <h3>Pretzels & Rolls</h3>
-                        <p>Soft, warm pretzels and dinner rolls, all handmade</p>
-                    </div>
-                </div>
-                <div class="product-card">
-                    <div class="product-image-container savory-5">
-                        <div class="product-icon">🫓</div>
-                    </div>
-                    <div class="product-info">
-                        <h3>Focaccia & Flatbreads</h3>
-                        <p>Herb-infused flatbreads and focaccia, baked fresh</p>
-                    </div>
-                </div>
-                <div class="product-card">
-                    <div class="product-image-container savory-6">
-                        <div class="product-icon">🧀</div>
-                    </div>
-                    <div class="product-info">
-                        <h3>Savory Muffins</h3>
-                        <p>Cheese, herb, and vegetable muffins, all handmade</p>
-                    </div>
-                </div>
+                <!-- Products will be loaded dynamically -->
             </div>
         </div>
     </section>
