Add export button to admin panel for easier product syncing

--- a/admin.html
+++ b/admin.html
@@ -46,7 +46,10 @@
             <section class="admin-section">
                 <div class="section-header">
                     <h2>Manage Products</h2>
-                    <button id="addProductBtn" class="btn btn-primary">+ Add New Product</button>
+                    <div style="display: flex; gap: 10px;">
+                        <button id="exportProductsBtn" class="btn btn-secondary" title="Copy products data">📋 Export Products</button>
+                        <button id="addProductBtn" class="btn btn-primary">+ Add New Product</button>
+                    </div>
                 </div>
 
                 <!-- Product Form Modal -->
