Add refresh button back to main website for manual product updates

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             <div class="product-tabs">
                 <button class="tab-btn active" data-tab="sweet">Sweet Treats</button>
                 <button class="tab-btn" data-tab="savory">Savory Delights</button>
+                <button class="tab-btn refresh-btn" id="refreshProducts" title="Refresh Products" style="margin-left: auto; padding: 8px 15px; font-size: 0.9rem;">🔄 Refresh</button>
             </div>
             
             <!-- Sweet Products -->
