--- a/index.html
+++ b/index.html
@@ -74,17 +74,17 @@
             </div>
             
             <!-- Import Modal -->
-            <div id="importModal" class="import-modal hidden">
+            <div id="importModal" class="import-modal hidden" style="display: none;">
                 <div class="import-modal-content">
                     <div class="import-modal-header">
                         <h3>Import Products</h3>
-                        <button class="import-modal-close" id="closeImportModal">&times;</button>
+                        <button type="button" class="import-modal-close" id="closeImportModal">&times;</button>
                     </div>
                     <p>1. Go to Admin Panel → Click "📋 Export Products"<br>2. Paste the data below:</p>
                     <textarea id="importData" placeholder="Paste product JSON data here..."></textarea>
                     <div class="import-modal-actions">
-                        <button type="button" class="btn btn-secondary" id="cancelImportBtn">Cancel</button>
-                        <button type="button" class="btn btn-primary" id="confirmImportBtn">Import</button>
+                        <button type="button" class="btn btn-secondary" id="cancelImportBtn" style="cursor: pointer; pointer-events: auto;">Cancel</button>
+                        <button type="button" class="btn btn-primary" id="confirmImportBtn" style="cursor: pointer; pointer-events: auto;">Import</button>
                     </div>
                 </div>
             </div>
