Fix import button with multiple event handlers and global function

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                     <p>1. Go to Admin Panel → Click "📋 Export Products"<br>2. Paste the data below:</p>
                     <textarea id="importData" placeholder="Paste product JSON data here..."></textarea>
                     <div class="import-modal-actions">
-                        <button type="button" class="btn btn-secondary" id="cancelImportBtn" style="cursor: pointer; pointer-events: auto;">Cancel</button>
-                        <button type="button" class="btn btn-primary" id="confirmImportBtn" style="cursor: pointer; pointer-events: auto;">Import</button>
+                        <button type="button" class="btn btn-secondary" id="cancelImportBtn">Cancel</button>
+                        <button type="button" class="btn btn-primary" id="confirmImportBtn" onclick="handleImportClick()">Import</button>
                     </div>
                 </div>
             </div>
